# secret-vrf-challenge-contract

./: .gitignore  .gitpod.yml  Cargo.toml  LICENSE  Makefile  NOTICE  README.md
.github/workflows/: Deploy.yml  Integration.yml  Static.yml  test-and-deploy.yml
.run/: Build.run.xml  Configure secretcli.run.xml  New Wallet.run.xml  build-contract.run.xml  build.run.xml
docs/: gitpod.md
src/: contract.rs  errors.rs  executes.rs  lib.rs  msg.rs  queries.rs  random.rs  rng.rs  state.rs  types.rs
tests/: integration.ts  package-lock.json  package.json  tsconfig.json
