[package]
name = "millionaire-problem"
version = "0.0.0"
authors = ["Itzik Grossman <itzik@scrtlabs.com>"]
edition = "2021"
publish = false
description = "A simple secret contract that solves the millionaire's problem on Secret Network"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[dependencies]
cosmwasm-std = { git = "https://github.com/scrtlabs/cosmwasm", rev = "d90f207a05d1bc6203fc9214f682d53e0d5ae76a" }
cosmwasm-storage = { git = "https://github.com/scrtlabs/cosmwasm", rev = "d90f207a05d1bc6203fc9214f682d53e0d5ae76a" }
cw-storage-plus = { version = "0.14.0", default-features = false }
# secret-toolkit = "0.4.0"
serde = { version = "=1.0.103", default-features = false, features = ["derive"] }
thiserror = "1.0"

[patch.crates-io]
cosmwasm-std = { git = "https://github.com/scrtlabs/cosmwasm", rev = "d90f207a05d1bc6203fc9214f682d53e0d5ae76a" }

